--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "framer-motion": "^11.5.4",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
